syntax = "proto3";

option csharp_namespace = "AuthGrpc";
package auth;

service AuthService {
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
  string accessToken = 1;
}

message ValidateTokenResponse {
  bool isValid = 1;
  string userId = 2;
  string role = 3;
  string uuid = 4;
  int64 iat = 5;
  int64 exp = 6;
  string error = 7;
}